--- a/index.html
+++ b/index.html
@@ -90,7 +90,20 @@
           <div id="right-panel">
             <div id="r1">
               <div id="r2">
-                <div id="screen2">Nueva seccion de PokeAPI</div>
+                <div id="screen2">
+                  <div class="screen2_box">
+                    <h3>BaseXP:</h3>
+                    <h4 class="screen2_box-h4" id="xpInfo">64</h4>
+                  </div>
+                  <div class="screen2_box">
+                    <h3>Height:</h3>
+                    <h4 class="screen2_box-h4" id="heightInfo">7</h4>
+                  </div>
+                  <div class="screen2_box">
+                    <h3>Weight:</h3>
+                    <h4 class="screen2_box-h4" id="weightInfo">69</h4>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
